# reproduction-research

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: baseline_repro.yaml  noise_shift_repro.yaml  redundancy_repro.yaml  tuned_repro.yaml
data/: sample_position_eval.jsonl
docs/: deep_read_notes.md  experiment_log.md  extension_analysis.md  paper_outline.md  project_plan.md  reproducible_claims.md  use.md  weekly_update.md
scripts/: run_baseline_repro.sh  run_noise_shift_repro.sh  run_redundancy_repro.sh
src/: __init__.py
src/data/: __init__.py  datasets.py
src/eval/: metrics.py
src/models/: model_interface.py
src/pipeline/: run_eval.py
src/prompts/: __init__.py  context_positioning.py
src/utils/: config.py  logging.py
tests/: test_dataset_loading.py  test_prompt_assembly.py
